; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_xen-scsiback.c_scsiback_cmd_exec.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_xen-scsiback.c_scsiback_cmd_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vscsibk_pend = type { i32, i32, i32, i32, %struct.TYPE_6__*, i32, i32, i32, i32, %struct.se_cmd }
%struct.TYPE_6__ = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.se_session* }
%struct.se_session = type { i32 }
%struct.se_cmd = type { i32 }

@TARGET_SCF_ACK_KREF = common dso_local global i32 0, align 4
@TCM_LOGICAL_UNIT_COMMUNICATION_FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vscsibk_pend*)* @scsiback_cmd_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scsiback_cmd_exec(%struct.vscsibk_pend* %0) #0 {
  %2 = alloca %struct.vscsibk_pend*, align 8
  %3 = alloca %struct.se_cmd*, align 8
  %4 = alloca %struct.se_session*, align 8
  %5 = alloca i32, align 4
  store %struct.vscsibk_pend* %0, %struct.vscsibk_pend** %2, align 8
  %6 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %7 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %6, i32 0, i32 9
  store %struct.se_cmd* %7, %struct.se_cmd** %3, align 8
  %8 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %9 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %8, i32 0, i32 4
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.se_session*, %struct.se_session** %15, align 8
  store %struct.se_session* %16, %struct.se_session** %4, align 8
  %17 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %18 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %17, i32 0, i32 8
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @scsiback_get(i32 %19)
  %21 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %22 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %21, i32 0, i32 7
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.se_cmd*, %struct.se_cmd** %3, align 8
  %25 = getelementptr inbounds %struct.se_cmd, %struct.se_cmd* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = load %struct.se_cmd*, %struct.se_cmd** %3, align 8
  %27 = load %struct.se_session*, %struct.se_session** %4, align 8
  %28 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %29 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %28, i32 0, i32 6
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %32 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %31, i32 0, i32 5
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %35 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %34, i32 0, i32 4
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %40 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %39, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %43 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = load i32, i32* @TARGET_SCF_ACK_KREF, align 4
  %46 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %47 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %2, align 8
  %50 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @target_submit_cmd_map_sgls(%struct.se_cmd* %26, %struct.se_session* %27, i32 %30, i32 %33, i32 %38, i32 %41, i32 0, i32 %44, i32 %45, i32 %48, i32 %51, i32* null, i32 0, i32* null, i32 0)
  store i32 %52, i32* %5, align 4
  %53 = load i32, i32* %5, align 4
  %54 = icmp slt i32 %53, 0
  br i1 %54, label %55, label %61

55:                                               ; preds = %1
  %56 = load %struct.se_cmd*, %struct.se_cmd** %3, align 8
  %57 = load i32, i32* @TCM_LOGICAL_UNIT_COMMUNICATION_FAILURE, align 4
  %58 = call i32 @transport_send_check_condition_and_sense(%struct.se_cmd* %56, i32 %57, i32 0)
  %59 = load %struct.se_cmd*, %struct.se_cmd** %3, align 8
  %60 = call i32 @transport_generic_free_cmd(%struct.se_cmd* %59, i32 0)
  br label %61

61:                                               ; preds = %55, %1
  ret void
}

declare dso_local i32 @scsiback_get(i32) #1

declare dso_local i32 @target_submit_cmd_map_sgls(%struct.se_cmd*, %struct.se_session*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @transport_send_check_condition_and_sense(%struct.se_cmd*, i32, i32) #1

declare dso_local i32 @transport_generic_free_cmd(%struct.se_cmd*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
